@@ -103,7 +103,7 @@ fi
 [ -d "$diffs_dir" ] || mkdir "$diffs_dir"
 [ -d "$out_dir" ] || mkdir "$out_dir"
 
-if tmp_dir=`mktemp -d l2h_t2h_XXXXXXXX`; then
+if tmp_dir=`mktemp -p /tmp -d l2h_t2h_XXXXXXXX`; then
   echo "\$L2H_TMP = '$tmp_dir';" > l2h_tmp_dir.init
   echo "1;" >> l2h_tmp_dir.init
 else
